@@ -81,7 +81,8 @@ Implementation differences between rEFInd and RefindPlus as at rEFInd v0.13.2 ar
   * Levels 1 to 4 output logs equivalent to the detailed upstream format
 - The `max` resolution setting is redundant in RefindPlus which always defaults to the maximum available resolution whenever the resolution is not set or is otherwise not available.
 - WQHD monitors are correctly determined not to be HiDPI monitors and UI elements are not scaled up on such monitors when the RefindPlus-Specific `scale_ui` token is set to the default option of automatic detection.
-- rEFInd now scans other ESPs for loaders in addition to the ESP containing the rEFInd loader. The earlier behaviour, where other ESPs were treated as duplicates and ignored, has been considered an error and changed. This earlier behaviour is preferred and maintained in RefindPlus. Users are however provided an option to override this behaviour, in favour of the new rEFInd behaviour, by activating the RefindPlus-Specific `scan_other_esp` configuration token.
+- ESPs other than that containing the rEFInd efi file are now also scaned for loaders by rEFInd. The earlier behaviour, where other ESPs were treated as duplicates and ignored, has been considered an error and changed. This earlier behaviour is preferred and maintained in RefindPlus. Users are however provided an option to override this behaviour, in favour of the new rEFInd behaviour, by activating the RefindPlus-Specific `scan_other_esp` configuration token.
+- When user configured boot stanzas are disabled using a `Disabled` token, rEFInd continues to process any other tokens within the stanza and fully builds the `Entry` object which is then discarded later. In RefindPlus, processing of a user configured boot stanza is halted once a `Disabled` token is encountered and a NULL `Entry` object is returned immediately. The outcome is the same when running rEFInd (which returns a fully built object to be subsequently discarded) and RefindPlus (which immediately returns a NULL object to be discarded) but the different processing approach allows users to optimise loading RefindPlus by placing any `Disabled` tokens in user configured boot stanzas immediately after the `menuentry` line (as in the config.conf-sample file).
 
 ## Roll Your Own
 Refer to [BUILDING.md](https://github.com/dakanji/RefindPlus/blob/GOPFix/BUILDING.md) for build instructions (x64 Only).
